# cosmonaute

./: Cargo.toml  README.md  justfile
i18n/en/: cosmonaute.ftl
resources/: app.desktop  app.metainfo.xml
src/: app.rs  docset.rs  main.rs
src/page/: docs.rs  home.rs  mod.rs
src/view/: docs.rs  home.rs  mod.rs
