[package]
name = "cosmonaute"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "libcosmic documentation viewer, because webdocs for large rust projects ist sloww."
repository = "https://github.com/GenericConfluent/cosmonaute"

[build-dependencies]
vergen = { version = "8", features = ["git", "gitcl"] }

[dependencies]
futures-util = "0.3.31"
i18n-embed-fl = "0.9.2"
open = "5.3.0"
rust-embed = "8.5.0"
tokio = { version = "1.41.0", features = ["full"] }
icondata = { version = "0.6.0", default-features = false, features = ["simple-icons", "ant-design-icons"] }
rustdoc-types = "0.54.0"
serde_json = "1.0.141"
bitcode = { version = "0.6.6", features = ["derive", "serde"] }
cargo_metadata = "0.21.0"
derive_more = { version = "2.0.1", features= ["from", "error"] }

[dependencies.i18n-embed]
version = "0.15"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Accessibility support
    "a11y",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Support creating additional application windows.
    "multi-window",
    # On app startup, focuses an existing instance if the app is already open
    "single-instance",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
    # Add Wayland support to winit
    "wayland",
    # GPU-accelerated rendering
    "wgpu",
    # Markdown
    "highlighter",
    "markdown",
    # File dialogs
    "rfd",
    # Debug features
    "debug"
]

# Uncomment to test a locally-cloned libcosmic
[patch.'https://github.com/pop-os/libcosmic']
libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
